--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Flower of Life — SVG</title>
-<style>
+  <title>Flower of Life — SVG Generator</title>
+  <style>
     body {
       margin: 0;
       display: grid;
@@ -58,31 +58,31 @@
     #scaleControl {
       width: 200px;
     }
-</style>
+  </style>
 </head>
 
 <body>
-<div class="controls">
-  <h3>Ring Visibility Controls</h3>
+  <div class="controls">
+    <h3>Ring Visibility Controls</h3>
     <div id="ringControls"></div>
-  <div class="control-group">
+    <div class="control-group">
       <button id="toggleAll">Toggle All</button>
       <button id="exportSvg">Export SVG</button>
       <button id="animateRings">Animate Rings</button>
-  </div>
-  <div class="control-group">
-    <label>
+    </div>
+    <div class="control-group">
+      <label>
         <input type="checkbox" id="showVertices" checked>
         Show Vertices
-    </label>
-        </div>
-        <div class="control-group">
-          <label for="scaleControl">Scale: <span id="scaleValue">1.0</span></label>
+      </label>
+    </div>
+    <div class="control-group">
+      <label for="scaleControl">Scale: <span id="scaleValue">1.0</span></label>
       <input type="range" id="scaleControl" min="0.1" max="3.0" step="0.1" value="1.0">
-        </div>
-</div>
+    </div>
+  </div>
 
-<div id="app"></div>
+  <div id="app"></div>
 
 <script>
 // Live reload - refreshes page when file changes
@@ -235,7 +235,7 @@ function genRing(ringIndex, cx, cy, r, stroke, color, referenceCircle, previousA
       currentY = iy;
     }
     
-    // Add vertices ONLY at the center of circles that were actually drawn for this ring
+    // Add vertices at center of drawn circles
     if (color && color !== "none") {
       for (const circleData of circles) {
         vertices.push(circle(circleData.x, circleData.y, 3, color, color, 1));
@@ -312,7 +312,7 @@ function genRing(ringIndex, cx, cy, r, stroke, color, referenceCircle, previousA
       }
     }
     
-    // Add vertices ONLY at the center of circles that were actually drawn for this ring
+    // Add vertices at center of drawn circles
     if (color && color !== "none") {
       for (const circleData of circles) {
         vertices.push(circle(circleData.x, circleData.y, 3, color, color, 1));
@@ -637,7 +637,7 @@ function setupEventListeners() {
     }
     updateRingVisibility();
   });
-  
+
   // Animate Rings button
   document.getElementById('animateRings').addEventListener('click', addRingsIncrementally);
   
